--- a/styles/contato.css
+++ b/styles/contato.css
@@ -35,3 +35,26 @@
     background: url("../image/email.svg") no-repeat;
     padding-left: 2em;
 }
+
+@media screen and (min-width: 1024px) {
+    .contato {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2em;
+    }
+
+    .contato__titulo {
+        font-size: 24px;
+        margin-bottom: 0.5em;
+    }
+
+    .contato__descricao {
+        width: 40%;
+    }
+
+    .contato__email {
+        width: 30%;
+    }
+
+}
